--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "homepage": "https://StayTroy.github.io/troy-portfolio",
   "name": "personal-website",
-  "homepage": "https://StayTroy.github.io/troy-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
